[package]
name = "spork"
version = "0.0.4"
authors = ["Jarusk"]

description = "A Rusty key-object store for embedded applications"
#keywords = [""]

documentation = "https://jarusk.github.io/Spork"
repository = "https://github.com/Jarusk/Spork"
license = "GPL-3.0"

[dependencies]
num_cpus = "0.2.12"
