[package]
name = "spork"
version = "0.0.6"
authors = ["Matt Yaraskavitch <yaraskavitch.matt@gmail.com>"]

description = "A Rusty key-object store for embedded applications"
#keywords = [""]

documentation = "https://jarusk.github.io/spork"
repository = "https://github.com/Jarusk/spork"
license = "MIT"

[dependencies]
num_cpus = "0.2.12"
time = "0.1.35"
